--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tender Kenya</title>
-    <link rel="stylesheet" href="tenderhome.css">
+    <link rel="stylesheet" href="./tenderhome.css">
     <link rel="icon" href="/images/kenya.jpg">
 </head>
 <body id="home">
@@ -20,6 +20,7 @@
                 <li><a href="login.html" target="">Login</a></li>
                 <li><a href="signin.html" target="">sign in</a></li>
             </ul>
+            
         </nav>
         <h1 id="home2">Tender Pick Kenya</h1>
         <p>As a developing country, Kenya continues to invest in infrastructure and public services to support national growth. To achieve this, the government regularly offers tenders, inviting citizens and businesses to participate in delivering key projects. Our platform provides a trusted space to access and engage with these opportunities efficiently and transparently. </p>
