signin page responsiveness

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
            
             <ul>
                 <li><img src="/images/kenya.jpg" alt="" height="70px"></li>
-                <li><a href="tenderhome.html" target="">Home</a></li>
+                <li><a href="index.html" target="">Home</a></li>
                 <li><a href="signin.html" target="">Sign in</a></li>
             </ul>
         </nav>
