--- a/signin.html
+++ b/signin.html
@@ -12,7 +12,7 @@
         <nav>
            
             <ul>
-                <img src="/images/kenya.jpg" alt="" height="70px">
+                <li><img src="/images/kenya.jpg" alt="" height="70px"></li>
                 <li><a href="tenderhome.html" target="">Home</a></li>
                 <li><a href="login.html" target="">login</a></li>
             </ul>
